--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@ body {
     background: var(--background-color);
     color: var(--text-color);
     line-height: 1.6;
+    text-align: center;
 }
 
 header {
